--- a/app/src/main/res/layout/slide2.xml
+++ b/app/src/main/res/layout/slide2.xml
@@ -61,8 +61,8 @@
                 android:background="@drawable/next"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Next"
-                android:textColor="@color/black"
                 android:textSize="20dp"
+                style="@style/CustomButtonStyle"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
