--- a/app/src/main/res/drawable/next.xml
+++ b/app/src/main/res/drawable/next.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" /> <!-- Background color -->
+            <solid android:color="@color/black" /> <!-- Background color -->
             <corners android:radius="16dp" /> <!-- Rounded corners -->
         </shape>
     </item>
