--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,49 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LoginActivity"
-    android:id="@+id/login">
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/login"
+    android:background="@color/black">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_marginStart="255dp"
+        android:background="@drawable/meshbgless" />
+    <ImageView
+        android:layout_width="294dp"
+        android:layout_height="290dp"
+        android:layout_marginStart="69dp"
+        android:background="@drawable/nexus"
+        />
+
+
+</RelativeLayout>
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:cardCornerRadius="95dp"
+        android:layout_marginRight="-79dp"
+        android:layout_marginBottom="-80dp">
 
-        <EditText
-            android:id="@+id/emailEditText"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:hint="Email" />
+            android:padding="28dp"
+            android:orientation="vertical"
+            android:layout_marginBottom="80dp"
+            android:background="@color/white">
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"/>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_gravity="center"/>
 
-        <EditText
-            android:id="@+id/passwordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:hint="Password"
-            android:inputType="textPassword" />
 
-        <Button
-            android:id="@+id/loginButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:text="Login" />
 
-        <Button
-            android:id="@+id/registerButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:text="Register" />
-    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/poppins_bold"
+                android:gravity="center"
+                android:layout_marginRight="30dp"
+                android:text="Login"
+                android:textColor="@color/black"
+                android:textSize="40dp" />
+
+            <View
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"/>
+
+            <EditText
+                android:id="@+id/emailtxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email and Username"
+                android:textColorHint="@color/grey"
+                android:textSize="15dp"
+                android:inputType="textEmailAddress"
+                android:layout_marginRight="79dp"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="@color/black"
+                android:drawableEnd="@drawable/users"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="45dp"/>
+            <EditText
+                android:id="@+id/passtxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColorHint="@color/grey"
+                android:textSize="15dp"
+                android:layout_marginRight="79dp"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="@color/black"
+                android:drawableEnd="@drawable/nosee"/>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="forgot password?"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/grey"
+                    android:textSize="10dp"
+                    android:layout_marginRight="79dp"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"/>
+          <Button
+              android:id="@+id/signbutt"
+              android:layout_width="match_parent"
+              android:layout_height="70dp"
+              android:text="sign in"
+              android:fontFamily="@font/poppins_medium"
+              android:textSize="20dp"
+              android:layout_marginRight="79dp"
+              android:background="@drawable/next"
+              android:textColor="@color/white"
+              android:layout_marginBottom="5dp"/>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Don't have an account?"
+                    android:layout_alignParentLeft="true"
+                    android:textColor="@color/grey"
+                    android:fontFamily="@font/poppins_medium"
+                    android:layout_marginLeft="55dp"
+                    android:textSize="15dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sign up"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/poppins_medium"
+                    android:layout_marginRight="156dp"
+                    android:textSize="16dp"
+                    android:layout_marginBottom="30dp"
+                    />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
