--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Base application theme for day mode -->
     <style name="Base.Theme.SplashScreen" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <item name="colorPrimary">@color/white</item>
+        <!-- Customize your dark theme here -->
+        <item name="colorPrimary">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+
+        <!-- Button customization for day mode -->
+        <item name="buttonStyle">@style/CustomButtonStyle</item>
+    </style>
+
+    <style name="Theme.SplashScreen" parent="Base.Theme.SplashScreen" />
+
+    <!-- Define custom button style for day mode -->
+    <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black </item>
     </style>
 </resources>
