--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#F71100</color>
+    <color name="red">#F44336</color>
+    <color name="grey">#CCCCCC</color>
 </resources>
