--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,18 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.SplashScreen" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+
+        <!-- Button customization for day mode -->
+        <item name="buttonStyle">@style/CustomButtonStyle</item>
     </style>
 
     <style name="Theme.SplashScreen" parent="Base.Theme.SplashScreen" />
+
+    <!-- Define custom button style for day mode -->
+    <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black </item>
+    </style>
 </resources>
