--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,345 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".MainActivity"
     android:id="@+id/main">
 
-    <!-- TextView to show instruction for the user -->
-    <TextView
-        android:id="@+id/instructionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter new hotspot password:"
-        android:textSize="18sp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- EditText for entering the new hotspot password -->
-    <EditText
-        android:id="@+id/newPasswordEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="New Hotspot Password"
-        android:inputType="textPassword"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructionText"
-        android:padding="10dp" />
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <!-- Button to change the hotspot password -->
-    <Button
-        android:id="@+id/changeHotspotPasswordButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Change Password"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newPasswordEditText" />
+        <!-- Collapsible AppBar -->
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
 
-    <!-- TextView to display success or failure message -->
-    <TextView
-        android:id="@+id/statusMessageTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="16sp"
-        android:textColor="@android:color/holo_green_dark"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/changeHotspotPasswordButton" />
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:elevation="0dp">
+
+            <!-- CollapsingToolbarLayout for collapsing behavior -->
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:contentScrim="@color/black"
+                android:background="@color/white"
+                app:title=""
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <!-- Background image for parallax effect -->
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/bgview"
+                    app:layout_collapseMode="parallax" />
+
+                <!-- Internet Speed Section -->
+
+                <!-- Toolbar for collapsed state -->
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                <ImageView
+                    android:id="@+id/logoimage"
+                    android:layout_width="200dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/nexus"
+                    android:layout_marginTop="-20dp"
+                    android:layout_centerHorizontal="true"/>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:padding="16dp"
+                        android:layout_marginTop="100dp"
+                        app:layout_anchorGravity="center"
+                        app:layout_collapseMode="parallax">
+
+                        <!-- Download Speed Column -->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="50dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <!-- Speed Value -->
+                            <TextView
+                                android:id="@+id/downloadSpeed"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="24 Mbps"
+                                android:textColor="@color/white"
+                                android:textSize="24sp" />
+
+                            <!-- Description -->
+                            <TextView
+                                android:id="@+id/downloadLabel"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif"
+                                android:gravity="center"
+                                android:text="Download\nSpeed"
+                                android:textColor="@color/white"
+                                android:textSize="18sp" />
+                        </LinearLayout>
+
+                        <!-- Upload Speed Column -->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="50dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <!-- Speed Value -->
+                            <TextView
+                                android:id="@+id/uploadSpeed"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="24 Mbps"
+                                android:textColor="@color/white"
+                                android:textSize="24sp" />
+
+                            <!-- Description -->
+                            <TextView
+                                android:id="@+id/uploadLabel"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif"
+                                android:gravity="center"
+                                android:text="Upload\nSpeed"
+                                android:textColor="@color/white"
+                                android:textSize="18sp" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+
+                </RelativeLayout>
+
+                <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    app:layout_collapseMode="pin" />
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+
+
+        <!-- Main content with NestedScrollView -->
+
+
+        <!-- Bottom Navigation Bar -->
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:clipToPadding="false"
+            android:padding="16dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/cards"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="2dp"
+                    android:weightSum="2">
+
+                    <!-- First Card: Total Earning -->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="50dp"
+                        android:layout_height="180dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="@color/black"
+                        app:cardCornerRadius="20dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:padding="16dp">
+
+                            <!-- Title -->
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left"
+                                android:layout_marginTop="5dp"
+                                android:fontFamily="@font/poppins"
+                                android:text="Total\nEarning"
+                                android:textColor="@color/white"
+                                android:textSize="20sp" />
+
+                            <!-- Value -->
+                            <TextView
+                                android:id="@+id/earningview"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="20dp"
+                                android:fontFamily="@font/poppins_medium"
+                                android:text="08"
+                                android:textColor="@color/white"
+                                android:textSize="40sp" />
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="0dp" />
+                    <!-- Second Card: Your Wallet -->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="50dp"
+                        android:layout_height="180dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="@color/black"
+                        app:cardCornerRadius="20dp"
+                        app:cardElevation="40dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:padding="16dp">
+
+                            <!-- Title -->
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left"
+                                android:layout_marginTop="5dp"
+                                android:fontFamily="@font/poppins"
+                                android:text="Your\nWallet"
+                                android:textColor="@color/white"
+                                android:textSize="20sp" />
+
+                            <!-- Value -->
+                            <TextView
+                                android:id="@+id/walletview"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="20dp"
+                                android:fontFamily="@font/poppins_medium"
+                                android:text="08"
+                                android:textColor="@color/white"
+                                android:textSize="40sp" />
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:id="@+id/shareconnect"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/cards"
+                    android:layout_marginTop="10dp"
+                    android:padding="16dp">
+
+                    <!-- Icon -->
+                    <ImageView
+                        android:id="@+id/icon_connection"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/shareview" />
+
+                    <!-- Title -->
+                    <TextView
+                        android:id="@+id/text_connection_history"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_toEndOf="@id/icon_connection"
+                        android:fontFamily="@font/poppins"
+                        android:text="Connection History"
+                        android:textColor="@color/black"
+                        android:textSize="24sp" />
+
+                </RelativeLayout>
+
+                <!-- RecyclerView -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewHistory"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/shareconnect"
+                    tools:listitem="@layout/item_connection_history" />
+
+
+
+            </RelativeLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomappbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabAlignmentMode="center"
+            android:padding="0dp"
+            android:backgroundTint="@color/white"
+            app:fabCradleRoundedCornerRadius="16dp"
+            android:paddingRight="0dp"
+            android:paddingLeft="0dp"
+            app:fabCradleVerticalOffset="8dp">
+
+            <!-- BottomNavigationView -->
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/navigation_bar_border"
+                android:elevation="10dp"
+                android:paddingLeft="0dp"
+                app:labelVisibilityMode="labeled"
+                app:menu="@menu/navmenu" />
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+        <!-- FloatingActionButton -->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:maxImageSize="50dp"
+            app:fabCustomSize="100dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="45dp"
+            android:backgroundTint="@color/black"
+            android:src="@drawable/baseline_wifi_24"
+            android:tint="@color/white"
+            android:scaleType="fitCenter"
+            app:layout_anchor="@id/bottomappbar"
+            app:shapeAppearanceOverlay="@style/roundedwifi" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
