--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,10 @@
     <!-- Define custom button style for day mode -->
     <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/white</item>
-        <item name="android:textColor">@color/black </item>
+        <item name="android:textColor">@color/black </item>c
     </style>
+    <style name="roundedwifi">
+        <item name="cornerSize">50%</item>
+    </style>
+    
 </resources>
